fixed icon overlap

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,9 @@
   box-sizing: border-box;
 }
 
-
 body {
  font-size: 1.6rem; 
  background: #374798;
- line-height: 1.6;
- min-height: 100vh;
- display: flex;
- flex-direction: column;
 }
 
 li {
@@ -65,6 +60,34 @@ button {
   margin: 0 1px;
 }
 
+/*About Component*/
+
+.aboutContainer {
+  position: absolute;
+  padding-bottom: 50px;
+  margin-left: auto;
+margin-right: auto;
+left: 0;
+right: 0;
+text-align: center;
+}
+
+.aboutContainer h1 {
+  text-align: center;
+}
+
+
+img {
+  max-width: 25%;
+  border:#946B2D solid 6px;
+  align-items: center;
+}
+
+
+.aboutText {
+  text-align: center;
+}
+
 
 /*Navigation Component*/
 
@@ -102,13 +125,10 @@ button {
 
   /*footer*/
   footer {
-    background: var(--color-primary);
-    padding: 3rem 0;
+    background:#374798;
     text-align: center;
     font-size: 2.0rem;
     margin-top: 6rem;
-    position: fixed;
-    bottom: 0;
     width: 100%;
   }
 
@@ -139,8 +159,7 @@ button {
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin-bottom: 2rem;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
   }
